--- a/css/editEmployeeStyle.css
+++ b/css/editEmployeeStyle.css
@@ -1,15 +1,15 @@
 body{
-    background-color: rgb(31, 29, 30);
+    background-color: rgb(31, 139, 222);
     display: flex;
     flex-direction: column;
     align-items: center;
-    color:rgb(77, 43, 0);
+    /*color:rgb(31, 139, 222);*/
 }
 
 .editEmployee{
     width:1200px;
     margin:1.5rem 0rem;
-    background-color: rgb(217,168,123);
+    background-color: white;
     border-radius: 1rem;
 }
 Input[type=text],Input[type=email],Input[type=date],select {
