--- a/css/employeeStyle.css
+++ b/css/employeeStyle.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(31, 29, 30);
+    /*background-color: rgb(31, 29, 30);*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +8,7 @@ body{
 
 #heading{
     margin:3rem 0rem 0rem 0rem;
-    color:rgb(241, 170, 63);
+    /*color:rgb(31, 139, 222);*/
 }
 
 .employee{
