--- a/css/editEmployeeStyle.css
+++ b/css/editEmployeeStyle.css
@@ -1,5 +1,7 @@
 body{
     background-color: rgb(31, 139, 222);
+    background-image: url("../assets/editpage-bg.jpg");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,7 +11,8 @@ body{
 .editEmployee{
     width:1200px;
     margin:1.5rem 0rem;
-    background-color: white;
+    /*background-color: white;*/
+    background-color: rgb(255,255,255,0.85);
     border-radius: 1rem;
 }
 Input[type=text],Input[type=email],Input[type=date],select {
