--- a/css/menu.css
+++ b/css/menu.css
@@ -32,6 +32,7 @@ td{
 #table-div{
     margin: 2rem auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -49,7 +50,7 @@ tr:nth-of-type(2n+1){
 }
 
 tr:nth-of-type(2n){
-    background-color: rgb(31, 139, 222)!important;
+    background-color: rgb(55, 169, 255) !important;
 }
 
 
