--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,23 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap');
+html{
+    font-size: 17px ;
+}
 :root {
     /*--dark-brown :rgb(31, 29, 30);*/
     --dark-brown : rgb(31, 139, 222);
+
     /*--light-brown : rgb(217,168,123);*/
     --light-brown : rgb(255,255,255);
 }
 
 *{
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
+    /*font-family: 'Fjalla One', sans-serif;*/
     /*font-family: 'Poppins', sans-serif;*/
 }
 
 body{
+    background-image: url("../assets/bg-trans.jpg");
     background-color : var(--light-brown) !important;
+    background-size: cover;
 }
 
 .navbar-main{
     background-color : var(--dark-brown) !important;
+    font-family: 'Fjalla One', sans-serif;
     width : 100%;
     justify-content: unset !important;
 }
@@ -27,9 +36,15 @@ body{
     color: var(--light-brown);
 }
 
+#offcanvasExample{
+    font-family: 'Fjalla One', sans-serif;
+}
+
 #navbarDropdownMenuLink{
     /* justify-content: end ; */
-    font-size: 1.5rem;
+    font-family: 'Fjalla One', sans-serif;
+
+    font-size: 1.25rem;
     color: var(--light-brown) !important;
 }
 
@@ -45,7 +60,7 @@ body{
 #container{
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
-    width: 100%;
+    max-width: 100%;
     padding-right: calc(var(--bs-gutter-x) * .5);
     padding-left: calc(var(--bs-gutter-x) * .5);
     margin-right: 10px;
@@ -58,7 +73,7 @@ body{
 }
 
 #resto-title{
-    font-size: 4vmin;
+    font-size: 3.5vmin;
     font-weight: bold;
 }
 
@@ -72,7 +87,7 @@ body{
 }
 
 .offcanvas-items{
-    font-size : 3vmin;
+    font-size : 2.94vmin;
     list-style : none;
 }
 
