--- a/css/newItemStyle.css
+++ b/css/newItemStyle.css
@@ -1,14 +1,16 @@
 body{
     background-color: rgb(31, 139, 222);
+    background-image: url("../assets/editpage-bg.jpg");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     color:rgb(77, 43, 0);
 }
 
-.editEmployee{
+.editItem{
+    background-color: rgb(255,255,255,0.85);
     width:1200px;
     margin:1.5rem 0rem;
-    background-color: white;
     border-radius: 1rem;
 }
